# cuttle-simulation

./: .env.example  .gitignore  ANALYSIS_FINDINGS.md  LICENSE  Procfile  README.md  claude.md  pyproject.toml  railway.json  requirements.txt  run_server.py
analytics/: __init__.py  move_ev.py  position_analysis.py
core/: __init__.py  cost_tracker.py  elo_manager.py  game_logger.py  player_identity.py  pricing.py
cuttle_engine/: __init__.py  cards.py  cli.py  executor.py  move_generator.py  moves.py  state.py
db/: __init__.py  database.py  schema.sql
docs/: llm_games_haiku.txt  llm_games_opus.txt  llm_games_sonnet.txt
scripts/: analyze_hand_context.py  analyze_mcts_comprehensive.py  brute_10k.py  brute_random_analysis.py  debug_mcts.py  deep_analysis_100k.py  investigate_discrepancy.py  play_vs_llm.py  recheck_sim.py  run_llm_tournament.py  test_threshold_strategy.py  trace_mcts.py  trace_mcts_deep.py  trace_mcts_logic.py  trace_simulations.py  train_with_mcts.py  view_game.py
simulation/: __init__.py  llm_tournament.py  runner.py  tournament.py
strategies/: __init__.py  base.py  heuristic.py  ismcts.py  llm_strategy.py  mcts.py  random_strategy.py
strategies/llm/: __init__.py  anthropic_provider.py  base.py  (+3 more)
tests/: __init__.py
training/: __init__.py  data_collector.py  parallel_runner.py
training_data/: MCTS_ANALYSIS_SUMMARY.md  mcts1000_vs_heuristic_100games.json  mcts2000_vs_heuristic_100games.json  mcts2000_vs_heuristic_50games.json  mcts5000_vs_heuristic_10games.json  mcts5000_vs_heuristic_50games.json  mcts_analysis_report.txt
web/: __init__.py
(+33 files in other folders)
